2002-10-28  Christian Rose  <menthos@menthos.com>

	* .cvsignore: Added files.

2002-10-27  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Removed file that no longer exists.

2002-10-24  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-10-01  Peteris Krisjanis <peteris.krisjanis@os.lv>
	
	* lv.po: Added Latvian translation.

2002-09-20  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-09-19  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2002-08-28  Gustavo Noronha Silva  <kov@debian.org>

	* pt_BR.po: New translation, 
	by "Alexandre Folle de Menezes" <afmenez@terra.com.br>

2002-08-27  Christian Neumair  <christian-neumair@web.de>

	* de.po: Updated German translation.

2002-08-17  Christian Neumair  <christian-neumair@web.de>

	* de.po: Fixed German translation.

2002-08-12  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Removed missing files and added missing ones.

2002-07-30 Hasbullah Bin Pit <sebol@ikhlas.com>

	* ms.po: Added Malay translation.

2002-07-19  Christophe Merlet  <christophe@merlet.net>

	* fr.po: Updated French translation and converted to UTF-8.

2002-07-09  Wang Jian  <lark@linux.net.cn>

	* zh_CN.po: Added Simplified Chinese translation by
	Zipeco <Zipeco@btamail.net.cn>.

2002-06-04  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-06-01  Zbigniew Chyla  <cyba@gnome.pl>

	* pl.po: Updated Polish translation by
	GNOME PL Team <translators@gnome.pl>.

2002-05-31  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>

	* sk.po: Updated Slovak translation by Marcel Telka <marcel@telka.sk>.

2002-05-30  Richard Hult  <rhult@codefactory.se>

	* POTFILES.skip: Add server.in file.
	* POTFILES.in: Add html-widget.c.

2002-05-28  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2002-05-28  Christian Rose  <menthos@menthos.com>
