@@ -1,3 +1,9 @@
+2002-11-03  Mikael Hallendal  <micke@codefactory.se>
+
+	* POTFILES.skip: removed file that no longer exists
+
+	* POTFILES.in: Removed removed files and added new ones.
+
 2002-10-28  Christian Rose  <menthos@menthos.com>
 
 	* .cvsignore: Added files.
